# gitvol

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  config.json  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: CI-dependencies.yml  CI.yml  bump-version.yml  create-release.yml  fmt.yml  git-release.yml  sync-dependencies.yml
src/: driver.rs  git.rs  global_config.rs  macros.rs  main.rs  middlewares.rs  mount_config.rs  plugin.rs  result.rs  settings.rs  split_tracing.rs  state.rs  store.rs
src/app/: handlers.rs  mod.rs  shared.rs  tests.rs
src/domains/: cmd.rs  mod.rs  repo.rs  url.rs  volume.rs
src/handlers/: activate.rs  creating.rs  info.rs  mod.rs  mounting.rs  result.rs  shared_structs.rs  workers.rs
src/services/: git.rs  mod.rs  volumes.rs
