[package]
name = "gitvol"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
env_logger = { version = "0.11.8", features = ["kv", "color"] }
log = { version = "0.4.27", features = ["kv", "kv_std"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
sha2 = "0.10.9"
tokio = { version = "1.47.0", features = ["fs", "full", "macros", "process", "sync", "time", "tokio-macros"] }
url = "2.5.4"

[dev-dependencies]
tempfile = "3.20.0"
