[package]
name = "gitvol"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = {version = "0.8.4", features = ["tower-log", "tokio"]}
env_logger = { version = "0.11.8", features = ["kv", "color"] }
log = { version = "0.4.27", features = ["kv", "kv_std"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sha2 = "0.10.9"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "fs", "macros", "sync", "process"] }

# broken deps
git-url-parse = "0.4.5"
url = { version = "2.5.4" }
tokio-stream = "0.1.17"
hyper = { version = "1.6.0", features = ["server"] }

[dev-dependencies]
once_cell = "1.21.3"
tempfile = "3.20.0"
uuid = { version = "1.17.0", features = ["v4"] }
