[package]
name = "gitvol"
version = "0.2.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["tower-log", "tokio"] }
tracing = { version = "0.1.41", features = ["async-await", "log", "valuable"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "fs", "macros", "sync", "process"] }
tokio-stream = "0.1.17"
clap = { version = "4.5.48", default-features = false, features = ["derive", "std", "help"] }
thiserror = "2.0.16"
async-trait = "0.1.89"

# broken deps
git-url-parse = "0.4.5"
url = { version = "2.5.4" }

[dev-dependencies]
axum-test = "18.1.0"
once_cell = "1.21.3"
rstest = "0.26.1"
tempfile = "3.23.0"
uuid = { version = "1.17.0", features = ["v4"] }


[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
